--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,26 @@
   font-style: normal;
 } */
 
+.logo {
+  width: 240px;
+  height: 50px;
+  margin: 20px 20px;
+}
+
+/* body {
+  width: 100%;
+  height: 100%; 
+  background-image: url("../imgs/background-img.jpeg");
+} */
+
+.into-button {
+  background-color: white;
+  box-shadow: rgb(126, 126, 126);
+  width: 280px;
+  height: 80px;
+  margin: auto 0;
+}
+
 .hide {
   width: 0;
   height: 0;
