--- a/css/index.css
+++ b/css/index.css
@@ -5,79 +5,33 @@
   font-weight: normal;
   font-style: normal;
 } */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&family=Song+Myung&display=swap');
+
+/* body {
+  height: 100vh;
+  background-size: cover;
+  background-image: url("../imgs/background-img.jpeg");
+  background-repeat: no-repeat;
+} */
 
 .logo {
+  z-index:5;
   width: 240px;
   height: 50px;
   margin: 20px 20px;
 }
 
-/* body {
-  width: 100%;
-  height: 100%; 
-  background-image: url("../imgs/background-img.jpeg");
-} */
-
 .into-button {
+  border-radius: 8px;
   background-color: white;
   box-shadow: rgb(126, 126, 126);
+  border-color: white;
   width: 280px;
-  height: 80px;
-  margin: auto 0;
-}
-
-.hide {
-  width: 0;
-  height: 0;
-  font-size: 0;
-  line-height: 0;
-  position: absolute;
-  visibility: hidden;
-}
-
-#header {
-  position: relative;
-}
-#headerWrap {
-  background-color: gray;
-  width: 100%;
-  height: 300px;
-}
-
-input {
-  display: block;
-}
-#title {
-  text-align: center;
-  color: black;
-  font-size: 60pt;
-  /* font-family: "twaysky"; */
-  padding-top: 10%;
-}
-
-div#wrap {
-  position: relative;
-}
-div > #headerWrap {
-  position: relative;
-  width: 100%;
-}
-/* header > nav {
-  position: relative;
-} */
-
-div#wrap > #headerWrap > #navbar {
-  position: absolute;
-}
-
-#navbar > li {
-  display: inline;
-  float: right;
-  margin-right: 3%;
-  font-size: 13pt;
-}
-
-#navbar > li > a {
-  list-style: none;
-  text-decoration: none;
+  height: 60px;
+  margin:auto;
+  display:block;
+  margin-top: 32vh;
+  font-family: 'Noto Serif KR', serif;
+  font-family: 'Song Myung', serif;
+  font-size: 1.5em;
 }
