--- a/css/input.css
+++ b/css/input.css
@@ -8,6 +8,20 @@
   position: relative;
 }
 
+#top {
+  margin-bottom: 8px;
+  margin-left: 60px;
+}
+
+#top > #title {
+  font-family: "Nanum Brush Script", cursive;
+  margin-bottom: 4px;
+}
+#top > #mainTitle {
+  font-family: "Nanum Brush Script", cursive;
+  width: 30%;
+}
+
 #content {
   border: dashed;
   border-color: black;
@@ -15,6 +29,7 @@
   position: relative;
   width: 90%;
   height: 565px;
+  /* margin-top: 40px; */
 }
 
 #box {
@@ -33,6 +48,7 @@
   background-color: #f1f1f1;
   color: rgb(73, 73, 73);
   font-size: 12pt;
+  font-family: "Nanum Brush Script", cursive;
 }
 
 #text::active {
@@ -186,3 +202,6 @@ h3 {
 h4 > #date {
   position: relative;
 }
+
+/* 
+ */
