--- a/css/index.css
+++ b/css/index.css
@@ -50,10 +50,15 @@
 }
 
 .text {
-  font-size: 18pt;
+  font-size: 16pt;
   margin-top: 21px;
   text-align: center;
   font-family: "Nanum Brush Script", cursive;
+  color: rgba(85, 85, 85, 0.521);
+}
+
+.text:hover > span {
+  color: red;
 }
 
 a {
