--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
 .content {
   text-align: center;
 }
-body{
+body {
   margin-top: 3px;
   margin-bottom: 40px;
 }
@@ -44,13 +44,20 @@ body{
   font-size: 1.2em;
 }
 
-.title {
+.typing-txt {
+  display: none;
+}
+.typing {
   padding-top: 125px;
-  text-align: center;
   /* font-family: "Song Myung", serif; */
   font-family: "Nanum Brush Script", cursive;
   /* font-family: "Do Hyeon", sans-serif; */
   font-size: 25pt;
+  display: flex;
+  justify-content: center;
+  animation-name: cursor;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
 }
 
 .text {
